Salesforce/main/default/objects/Area_Plantada__c/fields/Area_plantada_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Area_plantada_Hectares__c</fullName>
    <label>Área plantada (Hectares)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>