Salesforce/main/default/objects/Area_Plantada__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Áreas Plantadas</relationshipLabel>
    <relationshipName>Areas_Plantadas</relationshipName>
    <type>Lookup</type>
</CustomField>