Salesforce/main/default/objects/Area_Plantada__c/fields/Rendimento_medio__c.field-meta.xml
<CustomField>
    <fullName>Rendimento_medio__c</fullName>
    <label>Rendimento médio da produção (Q/ha)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>